--- a/control.html
+++ b/control.html
@@ -1,196 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Door System — Control</title>
-
-  <!-- Bootstrap 5 (CSS) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SMART DOOR SYSTEM</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
-    :root{
-      --bg1:#2c2c2c; --bg2:#1a1a1a;
-      --card:#2f2f2f; --list:#3a3a3a; --list-hover:#4a4a4a; --text:#fff;
+    body {
+      background: #121212;
+      color: #fff;
+      font-family: Arial, sans-serif;
     }
-    body{
-      background: linear-gradient(120deg,var(--bg1),var(--bg2));
-      color:var(--text);
-      font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,"Plus Jakarta Sans",Arial,sans-serif;
+    .accordion-button {
+      background: #1f1f1f;
+      color: #fff;
     }
-    h1{
-      text-align:center; font-weight:800; letter-spacing:.05em;
-      margin:40px 0 24px;
+    .accordion-button:not(.collapsed) {
+      background: #333;
+      color: #fff;
     }
-    .control-card{
-      background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
+    .accordion-body button {
+      display: block;
+      width: 100%;
+      margin: 5px 0;
+      border-radius: 10px;
+      padding: 10px;
     }
-    .btn-toggle{
-      width:100%; text-align:left; padding:16px 20px; font-weight:700; color:#fff;
-      background:transparent; border:0;
+    .live-card {
+      background: #1f1f1f;
+      border-radius: 12px;
+      padding: 15px;
+      margin-top: 20px;
     }
-    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
-    .list-group-dark .list-group-item{
-      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
+    video {
+      width: 100%;
+      border-radius: 12px;
+      background: black;
     }
-    .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
-    .ms-3{ margin-left:1rem !important; }
-    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
-    button.cmd-btn:hover {text-decoration:underline;}
   </style>
 </head>
 <body>
-  <div class="container py-3">
-    <h1>SMART DOOR SYSTEM</h1>
+  <div class="container py-4">
+    <h1 class="text-center mb-4">SMART DOOR SYSTEM</h1>
 
-    <!-- ========== OPTIONS ========== -->
-    <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#sdsOptions"
-              aria-expanded="false" aria-controls="sdsOptions"
-              onclick="closeInnerMenus('#sdsOptions')">
-        Smart Door System Options
-      </button>
+    <div class="accordion" id="accordionPanelsStayOpenExample">
 
-      <div id="sdsOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
+      <!-- ========== Smart Door Options ========== -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panel1" aria-expanded="true">
+            Smart Door System Options
+          </button>
+        </h2>
+        <div id="panel1" class="accordion-collapse collapse show">
+          <div class="accordion-body">
+            <h5>Open Door</h5>
+            <button class="btn btn-primary" onclick="sendCommand('open door all')">Open door & close it</button>
+            <button class="btn btn-success" onclick="sendCommand('open door')">Open door only</button>
+            <button class="btn btn-danger" onclick="sendCommand('close door')">Close door only</button>
 
-          <!-- Open Door -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#openDoorMenu"
-                    aria-expanded="false" aria-controls="openDoorMenu">
-              Open Door
-            </button>
-            <div id="openDoorMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">close door only</button></li>
-              </ul>
-            </div>
-          </li>
+            <h5 class="mt-3">Toggle Camera</h5>
+            <button class="btn btn-info" onclick="sendCommand('start camera')">Start camera</button>
+            <button class="btn btn-warning" onclick="sendCommand('stop camera')">Stop camera</button>
 
-          <!-- Toggle Camera -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#cameraMenu"
-                    aria-expanded="false" aria-controls="cameraMenu">
-              Toggle Camera
-            </button>
-            <div id="cameraMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start camera')">start camera</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop camera')">stop camera</button></li>
-              </ul>
-            </div>
-          </li>
+            <h5 class="mt-3">Toggle of the System</h5>
+            <button class="btn btn-secondary" onclick="sendCommand('lock system')">Lock system</button>
+            <button class="btn btn-light" onclick="sendCommand('unlock system')">Unlock system</button>
 
-          <!-- Toggle of the System -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#systemMenu"
-                    aria-expanded="false" aria-controls="systemMenu">
-              Toggle of the System
-            </button>
-            <div id="systemMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_loc')">lock system</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_unloc')">unlock system</button></li>
-              </ul>
-            </div>
-          </li>
-
-          <!-- Penalty Activate -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#penaltyMenu"
-                    aria-expanded="false" aria-controls="penaltyMenu">
-              Penalty Activate
-            </button>
-            <div id="penaltyMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen')">the system penalty</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen30')">extended to 30 seconds</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen60')">extended to 1 minutes</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzcof')">penalty with coffin dance buzzer</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzpoc')">penalty with pirates of the caribbean</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzztok')">penalty with tokyo</button></li>
-              </ul>
-            </div>
-          </li>
-
-        </ul>
+            <h5 class="mt-3">Penalty</h5>
+            <button class="btn btn-danger" onclick="sendCommand('penalty activate')">Penalty Activate</button>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <!-- ========== ADD-ON OPTIONS ========== -->
-    <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#addonOptions"
-              aria-expanded="false" aria-controls="addonOptions"
-              onclick="closeInnerMenus('#addonOptions')">
-        Smart Door System Add-on Options
-      </button>
-      <div id="addonOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
-        </ul>
+      <!-- ========== Extra Options ========== -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel2">
+            Smart Door System Add-on Options
+          </button>
+        </h2>
+        <div id="panel2" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <button class="btn btn-outline-primary" onclick="sendCommand('light on')">Light On</button>
+            <button class="btn btn-outline-secondary" onclick="sendCommand('light off')">Light Off</button>
+            <button class="btn btn-outline-info" onclick="sendCommand('fan on')">Fan On</button>
+            <button class="btn btn-outline-dark" onclick="sendCommand('fan off')">Fan Off</button>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <!-- ========== EXPLANATION ========== -->
-    <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#explain"
-              aria-expanded="false" aria-controls="explain"
-              onclick="closeInnerMenus('#explain')">
-        Smart Door System Explanation
-      </button>
-      <div id="explain" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
-         <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
-         <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
-         <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- ========== LIVE STREAM (NEW) ========== -->
-    <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#liveStream"
-              aria-expanded="false" aria-controls="liveStream"
-              onclick="closeInnerMenus('#liveStream')">
-        📹 Live Stream
-      </button>
-      <div id="liveStream" class="collapse">
-        <div class="p-3">
-          <video id="remoteVideo" autoplay playsinline style="width:100%;border-radius:12px;background:black;"></video>
-          <button class="btn btn-success mt-3" onclick="startStream()">Start Live</button>
+      <!-- ========== Explanation ========== -->
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panel3">
+            Smart Door System Explanation
+          </button>
+        </h2>
+        <div id="panel3" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            This is the smart door system control panel with camera, lock system, and add-on features.
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- ========== Live Stream Section ========== -->
+    <div class="live-card">
+      <h3>📹 Live Stream</h3>
+      <video id="remoteVideo" autoplay playsinline></video>
+      <button id="liveBtn" class="btn btn-success mt-3">Start Live Stream</button>
+    </div>
   </div>
-
-  <!-- Bootstrap 5 (JS) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Firebase + Logic -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
     import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
+    // ✅ firebaseConfig متاعك
     const firebaseConfig = {
       apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
       authDomain: "smart-door-system-project.firebaseapp.com",
@@ -205,34 +133,18 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    // send command
-    function sendCommand(command) {
-      set(ref(db, "commands/last"), {
-        action: command,
+    // إرسال أوامر عادية
+    async function sendCommand(cmd) {
+      await set(ref(db, "commands/last"), {
+        action: cmd,
         timestamp: Date.now()
       });
-      alert("✅ Sent: " + command);
     }
     window.sendCommand = sendCommand;
 
-    // close submenus
-    window.closeInnerMenus = function (parentId) {
-      setTimeout(() => {
-        let parent = document.querySelector(parentId);
-        if (parent && !parent.classList.contains("show")) {
-          let opened = parent.querySelectorAll(".collapse.show");
-          opened.forEach(el => {
-            let bsCollapse = bootstrap.Collapse.getInstance(el);
-            if (bsCollapse) {
-              bsCollapse.hide();
-            }
-          });
-        }
-      }, 200);
-    };
-
-    // ======= WebRTC part for Live Stream =======
+    // ========== WebRTC ==========
     let pc;
+
     async function startStream() {
       pc = new RTCPeerConnection();
 
@@ -243,12 +155,13 @@
       const offer = await pc.createOffer();
       await pc.setLocalDescription(offer);
 
-      await set(ref(db, "commands/last"), {
-        action: "webrtc_offer",
+      // نبعث offer للبايثون عبر Firebase
+      await set(ref(db, "webrtc_offer"), {
         sdp: offer.sdp,
         timestamp: Date.now()
       });
 
+      // نستقبل الـ answer من بايثون
       onValue(ref(db, "webrtc_answer"), async (snapshot) => {
         const data = snapshot.val();
         if (data && data.sdp && !pc.currentRemoteDescription) {
@@ -260,7 +173,8 @@
         }
       });
     }
-    window.startStream = startStream;
+
+    document.getElementById("liveBtn").addEventListener("click", startStream);
   </script>
 </body>
 </html>
